Fixed Intro Overflow; Made Page 2 Responsive

--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ html, body {
     top: 3%;
     z-index: 4;
     opacity: 0.7;
+    max-width: 100vw; /* prevent horizontal overflow when animated */
+    /* overflow: hidden;  */
 }
 
 #hero-1 {
@@ -875,7 +877,206 @@ html, body {
     }
 
     #page1 {
-        min-height: 50vh;
+        min-height: 60vh;
     }    
+
+        
+    #page2 {
+        min-height: 50vh;
+        width: 100%;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #content-left {
+        width: 100%;
+        padding: 0 1vw;
+        margin-bottom: 5vw;
+        margin-top: 11vw;
+    }
+
+
+    #page2 .content {   
+        padding: 0 3vw;
+        margin: 0 0vw;
+        padding-top: 0vw;
+    }
+
+    #page2 .content h2 {
+        font-size: 9vw;
+    }
+
+    #page2 .content p {
+        width: 100%;
+        margin-left: 0.8vw;
+        font-size: 3.2vw;
+        padding-top: 2vw;
+    }
+
+    
+    #morphing-shape-container {
+        display: none;
+    }
+    
+    
+    /* #--------------------------------------------------------------------- */
+
+    #moving-text {
+        white-space: nowrap;
+        overflow-x: auto;
+        margin-top: 10vw;
+        padding-bottom: 10vw;
+    }
+
+    #moving-text::-webkit-scrollbar {
+        display: none;
+    }
+
+
+    .con {
+        white-space: nowrap;
+        display: inline-block;
+        gap: 1vw;
+        animation: move-left 10s linear infinite;
+    }
+
+    .con svg {
+        height: 15vw;
+        width: 15vw;
+    }
+
+    #circle {
+        height: 3vw;
+        width: 3vw;
+        background-color: var(--frosted-blue);
+        border-radius: 50%;
+        display: inline-block;
+        margin: 4vw 3vw;
+    }
+    /* #--------------------------------------------------------------------- */
+
+    #tech-skills {
+        flex-direction: column;
+        margin-top: 2.5vw;
+        margin-left: 0vw;
+        padding: 0 4vw;
+        gap: 3.5vw;
+        padding-bottom: 10vw;
+    }
+
+    #tech-skills .card {
+        width: 80%;
+        height: 16vh;
+        border-radius: 20px;
+        padding: 2.5vw 3.5vw;
+        padding-right: 3.5vw;
+    }
+
+    #tech-skills .card-title {
+        font-size: 6.2vw;
+        margin-bottom: 1vw;
+    }
+
+    #tech-skills .card-stack {
+        font-size: 4.5vw;
+        margin-bottom: 1vw;
+        width:100%;
+    }
+
+    #tech-skills .card-desc {
+        font-size: 3.2vw;
+        margin-bottom: 1vw;
+        width: 85%;
+    }
+
+        
+    #page3 {
+        min-height: 60vh;
+        position: relative;
+        background-color: var(--beige);
+        width: 100%;
+        border-bottom-left-radius: 40px;
+        border-bottom-right-radius: 40px;
+    }
+
+
+    #page3-title {
+        display: flex;
+        align-items: center;
+        padding-top: 4vw;
+        margin-bottom: 2vw;
+    }
+
+    #page3-title #circle {
+        height: 2vw;
+        width: 2vw;
+        margin-right: 2vw;
+        margin-left: 3vw;
+    }
+
+    #page3-projects {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .list-item {
+        position: relative;
+        overflow-y: hidden;
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+        transition: all 0.3s ease;
+    }
+
+    .overlay {
+        position: absolute;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 7.5vw;
+        background-color: var(--frosted-blue);
+        z-index: 0;
+        transition: all 0.3s ease;
+    }
+
+    .project{
+        height: 7vh;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        padding-left: 2.5vw;
+    }
+
+    .list-item:hover .overlay{
+        top: 0;
+    }
+
+    .list-item:hover .project{
+        color: var(--teal);
+    }
+
+    .project h2 {
+        font-family: "Mozilla Headline", sans-serif;
+        font-size: 10vw;
+        font-weight: 500;
+        z-index: 1;
+    }
+
+    .list-item:nth-child(even) {
+        border: none; /* Remove border from even-numbered projects */
+    }
+
+    .list-item:nth-child(6) {
+        border-bottom: 2px solid black;
+    }
+
+    #hover-card{
+        display: none;
+    }
 }
 
